@@ -15,7 +15,7 @@ import nl.knaw.iisg.burgerlinker.utilities.LoggingUtilities;
 public class App {
     // default arguments
     private final String modelDefault = "PiCo-SDO",  // use shorthand
-                  rulesetDefault = "default",  // use shorthand
+                  rulesetDefault = "LINKS",  // use shorthand
                   namespaceDefault = "https://www.example.org/";
 
 
